CREATE EXTENSION IF NOT EXISTS postgis;

CREATE TABLE app_user (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email varchar(254) NOT NULL,
    password_hash varchar(100) NOT NULL,
    nickname varchar(20) NOT NULL,
    role varchar(20) NOT NULL,
    status varchar(20) NOT NULL,
    created_at timestamp NOT NULL,
    updated_at timestamp NOT NULL,
    last_login_at timestamp,
    CONSTRAINT uk_app_user_email UNIQUE (email),
    CONSTRAINT ck_app_user_role CHECK (role IN ('USER', 'ADMIN')),
    CONSTRAINT ck_app_user_status CHECK (status IN ('ACTIVE', 'DISABLED'))
);

CREATE TABLE popup_store (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name varchar(100) NOT NULL,
    address varchar(255) NOT NULL,
    latitude double precision NOT NULL,
    longitude double precision NOT NULL,
    start_date date NOT NULL,
    end_date date NOT NULL,
    category varchar(30),
    status varchar(30),
    description text,
    image_url varchar(500),
    created_at timestamp NOT NULL,
    updated_at timestamp NOT NULL,
    CONSTRAINT ck_popup_store_category CHECK (
        category IS NULL OR category IN ('FASHION', 'BEAUTY', 'FOOD', 'CHARACTER', 'LIFESTYLE', 'ETC')
    ),
    CONSTRAINT ck_popup_store_status CHECK (
        status IS NULL OR status IN ('UPCOMING', 'OPEN', 'CLOSED')
    ),
    CONSTRAINT ck_popup_store_dates CHECK (start_date <= end_date),
    CONSTRAINT ck_popup_store_latitude CHECK (latitude BETWEEN -90 AND 90),
    CONSTRAINT ck_popup_store_longitude CHECK (longitude BETWEEN -180 AND 180)
);

CREATE TABLE refresh_token (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id bigint NOT NULL,
    token_hash varchar(64) NOT NULL,
    expires_at timestamp NOT NULL,
    revoked_at timestamp,
    created_at timestamp NOT NULL,
    replaced_by_token_id bigint,
    CONSTRAINT fk_refresh_token_user FOREIGN KEY (user_id) REFERENCES app_user(id),
    CONSTRAINT fk_refresh_token_replacement FOREIGN KEY (replaced_by_token_id)
        REFERENCES refresh_token(id) ON DELETE SET NULL
);
CREATE UNIQUE INDEX idx_refresh_token_hash ON refresh_token(token_hash);
CREATE INDEX idx_refresh_token_user ON refresh_token(user_id);

CREATE TABLE popup_engagement_summary (
    popup_store_id bigint PRIMARY KEY,
    view_count bigint NOT NULL DEFAULT 0,
    like_count bigint NOT NULL DEFAULT 0,
    plan_add_count bigint NOT NULL DEFAULT 0,
    updated_at timestamp NOT NULL,
    CONSTRAINT fk_engagement_summary_popup FOREIGN KEY (popup_store_id)
        REFERENCES popup_store(id) ON DELETE CASCADE,
    CONSTRAINT ck_engagement_summary_nonnegative CHECK (
        view_count >= 0 AND like_count >= 0 AND plan_add_count >= 0
    )
);

CREATE TABLE popup_engagement_event (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    popup_store_id bigint NOT NULL,
    anonymous_visitor_id varchar(64) NOT NULL,
    session_id varchar(64) NOT NULL,
    event_type varchar(20) NOT NULL,
    occurred_at timestamp NOT NULL,
    CONSTRAINT uk_popup_engagement_event_session
        UNIQUE (popup_store_id, session_id, event_type),
    CONSTRAINT ck_engagement_event_type CHECK (event_type IN ('DETAIL_VIEW', 'PLAN_ADD')),
    CONSTRAINT fk_engagement_event_popup FOREIGN KEY (popup_store_id)
        REFERENCES popup_store(id) ON DELETE CASCADE
);

CREATE TABLE popup_like (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    popup_store_id bigint NOT NULL,
    anonymous_visitor_id varchar(64),
    user_id bigint,
    created_at timestamp NOT NULL,
    CONSTRAINT uk_popup_like_visitor UNIQUE (popup_store_id, anonymous_visitor_id),
    CONSTRAINT uk_popup_like_user UNIQUE (popup_store_id, user_id),
    CONSTRAINT ck_popup_like_owner CHECK (
        (anonymous_visitor_id IS NOT NULL AND user_id IS NULL)
        OR (anonymous_visitor_id IS NULL AND user_id IS NOT NULL)
    ),
    CONSTRAINT fk_popup_like_popup FOREIGN KEY (popup_store_id)
        REFERENCES popup_store(id) ON DELETE CASCADE,
    CONSTRAINT fk_popup_like_user FOREIGN KEY (user_id) REFERENCES app_user(id)
);
CREATE INDEX idx_popup_like_user ON popup_like(user_id);

CREATE TABLE popup_favorite (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id bigint NOT NULL,
    popup_store_id bigint NOT NULL,
    created_at timestamp NOT NULL,
    CONSTRAINT uk_popup_favorite_user_store UNIQUE (user_id, popup_store_id),
    CONSTRAINT fk_popup_favorite_user FOREIGN KEY (user_id) REFERENCES app_user(id),
    CONSTRAINT fk_popup_favorite_popup FOREIGN KEY (popup_store_id) REFERENCES popup_store(id)
);
CREATE INDEX idx_popup_favorite_user_created ON popup_favorite(user_id, created_at);
CREATE INDEX idx_popup_favorite_store ON popup_favorite(popup_store_id);

CREATE TABLE visit_history (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id bigint NOT NULL,
    popup_store_id bigint NOT NULL,
    visited_at timestamp NOT NULL,
    visit_date date NOT NULL,
    source varchar(30) NOT NULL,
    route_session_id varchar(64),
    created_at timestamp NOT NULL,
    CONSTRAINT uk_visit_user_store_date UNIQUE (user_id, popup_store_id, visit_date),
    CONSTRAINT ck_visit_source CHECK (source IN ('NAVIGATION_ARRIVAL', 'MANUAL_CONFIRMATION')),
    CONSTRAINT fk_visit_user FOREIGN KEY (user_id) REFERENCES app_user(id),
    CONSTRAINT fk_visit_popup FOREIGN KEY (popup_store_id) REFERENCES popup_store(id)
);
CREATE INDEX idx_visit_user_visited ON visit_history(user_id, visited_at);
CREATE INDEX idx_visit_store ON visit_history(popup_store_id);

CREATE TABLE popup_review (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id bigint NOT NULL,
    popup_store_id bigint NOT NULL,
    visit_history_id bigint NOT NULL,
    rating integer NOT NULL,
    content varchar(1000) NOT NULL,
    created_at timestamp NOT NULL,
    updated_at timestamp NOT NULL,
    CONSTRAINT uk_review_user_store UNIQUE (user_id, popup_store_id),
    CONSTRAINT ck_review_rating CHECK (rating BETWEEN 1 AND 5),
    CONSTRAINT ck_review_content_length CHECK (char_length(content) BETWEEN 10 AND 1000),
    CONSTRAINT fk_review_user FOREIGN KEY (user_id) REFERENCES app_user(id),
    CONSTRAINT fk_review_popup FOREIGN KEY (popup_store_id) REFERENCES popup_store(id),
    CONSTRAINT fk_review_visit FOREIGN KEY (visit_history_id) REFERENCES visit_history(id)
);
CREATE INDEX idx_review_store_created ON popup_review(popup_store_id, created_at);
CREATE INDEX idx_review_user ON popup_review(user_id);
CREATE INDEX idx_review_visit ON popup_review(visit_history_id);

CREATE TABLE popup_review_summary (
    popup_store_id bigint PRIMARY KEY,
    rating_sum bigint NOT NULL DEFAULT 0,
    review_count bigint NOT NULL DEFAULT 0,
    average_rating double precision NOT NULL DEFAULT 0,
    updated_at timestamp NOT NULL,
    CONSTRAINT fk_review_summary_popup FOREIGN KEY (popup_store_id)
        REFERENCES popup_store(id) ON DELETE CASCADE,
    CONSTRAINT ck_review_summary_nonnegative CHECK (rating_sum >= 0 AND review_count >= 0),
    CONSTRAINT ck_review_summary_average CHECK (average_rating BETWEEN 0 AND 5)
);
